--- a/BlueCanvasOut.html
+++ b/BlueCanvasOut.html
@@ -1,22 +1,11 @@
 <html>
 
-<style>
-
-  a {
-    color: orange;
-  }
-
-</style>
-
-<script src="cvc-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
-
-<div data-lightning-out="true"></div>
-
+ <script src="https://rengoku72-developer-edition.na150.force.com/lightning/lightning.out.js"></script>
   <script>
 
     const appName = 'c:OptOutFormWrapper';
     const componentName = 'c:optoutForm';
-    const lightningEndpoint = 'cvc-dev-ed.my.salesforce.com';
+    const lightningEndpoint = 'https://rengoku72-developer-edition.na150.force.com';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
