--- a/BlueCanvasOut.html
+++ b/BlueCanvasOut.html
@@ -8,9 +8,7 @@
 
 </style>
   
-<!--<script src="https://rengoku72-developer-edition.na150.force.com/lightning/lightning.out.js"></script>-->
-
-  <script src="https://formation-softway-medical.cs160.force.com/lightning/lightning.out.js"></script>
+<script src="https://rengoku72-developer-edition.na150.force.com/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
@@ -18,8 +16,7 @@
 
     const appName = 'c:OptOutFormWrapper';
     const componentName = 'c:optoutForm';
-    //const lightningEndpoint = 'https://rengoku72-developer-edition.na150.force.com';
-    const lightningEndpoint = 'https://formation-softway-medical.cs160.force.com';
+    const lightningEndpoint = 'https://rengoku72-developer-edition.na150.force.com';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
