--- a/BlueCanvasOut.html
+++ b/BlueCanvasOut.html
@@ -14,8 +14,10 @@
 
   <script>
 
-    const appName = 'c:OptOutFormWrapper';
-    const componentName = 'c:optoutForm';
+ //   const appName = 'c:OptOutFormWrapper';
+ //   const componentName = 'c:optoutForm';
+    const appName = 'c:SaisieOnboardingSTR';
+    const componentName = 'c:saisieOnboarding';
     const lightningEndpoint = 'https://rengoku72-developer-edition.na150.force.com';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
