--- a/BlueCanvasOut.html
+++ b/BlueCanvasOut.html
@@ -8,7 +8,7 @@
 
 </style>
   
-<script src="	https://rengoku72-developer-edition.na150.force.com/lightning/lightning.out.js"></script>
+<script src="	https://rengoku72-developer-edition.na150.force.com/test/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
@@ -18,7 +18,7 @@
  //   const componentName = 'c:optoutForm';
     const appName = 'c:SaisieOnboardingSTR';
     const componentName = 'c:saisieOnboarding';
-    const lightningEndpoint = '	https://rengoku72-developer-edition.na150.force.com';
+    const lightningEndpoint = '	https://rengoku72-developer-edition.na150.force.com/test';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
